upgrade code adding start button and also enhance the game

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="simon.css">
 </head>
 <body>
-    <h2>Simon Says Game</h2>
+    <div class="heading">
+        <h2>Simon Says Game</h2>
+        <h4>"Test your Memory"</h4>
+    </div>
+    
    
-    <h4>Press any key to start the game</h4>
+    <!-- <h4>Press the button to start the game</h4> -->
+    <button id="start-button" onclick="startGame()">Start Game</button> <!-- Added Start Button -->
     <div class="btn-container">
         <div class="first-line">
           <div class="btn red" type = "button" id="red">1</div>
