--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <h2>Simon Says Game</h2>
         <h4>"Test your Memory"</h4>
     </div>
+    <h5><span>Rules : </span> Watch and repeat the color sequence from the start. Each round
+         <br/> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; adds a  new color, repeat the sequence correctly to keep playing!.
+         </h5>
     
    
     <!-- <h4>Press the button to start the game</h4> -->
