--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <h2>Simon Says Game</h2>
         <h4>"Test your Memory"</h4>
     </div>
-    <h5><span>Rules : </span> Watch and repeat the color sequence from the start. Each round
-         <br/> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; adds a  new color, repeat the sequence correctly to keep playing!.
+    <h5><span>Rules : </span> Watch and repeat the color sequence from the start.</h5>
+    <h5>Each round&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; adds a  new color, repeat the sequence correctly to keep playing!.</h5> 
+         
          </h5>
     
    
